test/preprocessor/fail/unterminated_include.osl
#include "unterminated_file_name_quotes
#include <unterminated_file_name_brackets
